fix: account page problem of overflow of textbox fixed, phone number in account page fixed, button focus color change

--- a/src/helper_methods/static/homeStyleSaf.css
+++ b/src/helper_methods/static/homeStyleSaf.css
@@ -117,10 +117,11 @@ h4 {
     font-family: Montserrat, sans-serif;
 }
 .navbar li a, .navbar .navbar-brand {
-    color: yellow !important;
+    color: gold !important;
 }
 .navbar-nav li a:hover, .navbar-nav li.active a {
-color: white !important;
+color: black !important;
+background-color: gold !important
 }
 .navbar-default .navbar-toggle {
     border-color: transparent;
@@ -278,4 +279,8 @@ a.article-title:hover {
   display: inline-block;
   text-align: left;
   vertical-align: middle;
+}
+
+.btn:focus, .btn:hover {
+    color: #FF7F50;
 }
